crates/mir/filetests/tests/invalid_programs/jump_to_entry_block.mir
// @harness parser_roundtrip
// @harness cfg_integrity_validation_fails
(mir
    (func foo
        (return_type int)
        (captures_type unit)
        (entry block0)
        (block block0
            (param captures (mref unit))
            (jump (block1 ())))
        (block block1
            (jump (block0 ())))))